--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -63,6 +63,8 @@
                         <div class="formData">
                             <label for="last">Nom</label><br>
                             <input class="text-control" type="text" id="last" name="last" /><br>
+                            <p id="lastError" class="error">
+                            </p>
                         </div>
                         <div class="formData">
                             <label for="email">E-mail</label><br>
@@ -117,7 +119,7 @@
                             <input class="checkbox-input" type="checkbox" id="checkbox2" />
                             <label class="checkbox2-label" for="checkbox2">
                                 <span class="checkbox-icon"></span>
-                                Je Je souhaite être prévenu des prochains évènements.
+                                Je souhaite être prévenu des prochains évènements.
                             </label>
                             <br>
                         </div>
