--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -58,25 +58,31 @@
                     <form name="reserve" action="index.html" method="get" onsubmit="return validate();">
                         <div class="formData">
                             <label for="first">Prénom</label><br>
-                            <input class="text-control" type="text" id="first" name="first" minlength="2" /><br>
+                            <input class="text-control" autocomplete="off" type="text" id="first" name="first"
+                                minlength="2" /><br>
+                            <span class="span">Veuillez entrer 2 caractères ou plus.</span>
                         </div>
                         <div class="formData">
                             <label for="last">Nom</label><br>
-                            <input class="text-control" type="text" id="last" name="last" /><br>
-                            <p id="lastError" class="error">
-                            </p>
+                            <input class="text-control" autocomplete="off" type="text" id="last" name="last" /><br>
+                            <span class="span">Veuillez entrer 2 caractères ou plus.</span>
                         </div>
                         <div class="formData">
                             <label for="email">E-mail</label><br>
-                            <input class="text-control" type="email" id="email" name="email" /><br>
+                            <input class="text-control" autocomplete="off" type="email" id="email" name="email" /><br>
+                            <span class="span">Adresse mail non valide</span>
                         </div>
                         <div class="formData">
                             <label for="birthdate">Date de naissance</label><br>
                             <input class="text-control" type="date" id="birthdate" name="birthdate" /><br>
+                            <span class="span">Vous devez entrer votre date de naissance.</span>
+
                         </div>
                         <div class="formData">
                             <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
                             <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
+                            <span>C'est PAS un Nombre</span>
+
                         </div>
                         <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
                         <div class="formData">
