--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -3,11 +3,12 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Reservation</title>
+    <title>GameOn - Reservation</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="stylesheet" href="modal.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet" />
+    <link rel="icon" href="./web-logo-favicon.png">
 </head>
 
 <body>
@@ -52,10 +53,10 @@
         </div>
 
         <div class="bground">
-            <div class="content">
+            <div class="content ">
                 <span class="close"></span>
-                <div class="modal-body">
-                    <form name="reserve" action="index.html" method="get" onsubmit="return validate();">
+                <div class="modal-body ">
+                    <form id="myForm" name="reserve" action="index.html" method="get" onsubmit="return validate();">
                         <div class="formData">
                             <label for="first">Prénom</label><br>
                             <input class="text-control" autocomplete="off" type="text" id="first" name="first"
@@ -81,12 +82,13 @@
                         <div class="formData">
                             <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
                             <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
-                            <span>C'est PAS un Nombre</span>
+                            <span class="span">Entrez un chiffre positif.
+                            </span>
 
                         </div>
                         <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
                         <div class="formData">
-                            <input class="checkbox-input" type="radio" id="location1" name="location"
+                            <input class="checkbox-input" type="radio" checked="checked" id="location1" name="location"
                                 value="New York" />
                             <label class="checkbox-label" for="location1">
                                 <span class="checkbox-icon"></span>
@@ -113,6 +115,7 @@
                             <label class="checkbox-label" for="location6">
                                 <span class="checkbox-icon"></span>
                                 Portland</label>
+                            <span class="span-city">Vous devez choisir une option.</span>
                         </div>
 
                         <div class="formData">
@@ -128,11 +131,18 @@
                                 Je souhaite être prévenu des prochains évènements.
                             </label>
                             <br>
+                            <span class="span">Vous devez vérifier que vous acceptez les termes et conditions.</span>
                         </div>
                         <input class="btn-submit" type="submit" class="button" value="C'est parti" />
                     </form>
                 </div>
+                <div class="modal-body-succed disable">
+                    <h2>Merci !<br> Votre réservation a été reçue.</h2>
+                    <button class="button" id="btn-end">Fermer</button>
+                </div>
             </div>
+
+
         </div>
     </main>
     <footer>
