--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -56,7 +56,7 @@
             <div class="content ">
                 <span class="close"></span>
                 <div class="modal-body ">
-                    <form id="myForm" name="reserve" action="index.html" method="get" onsubmit="return validate();">
+                    <form id="myForm" name="reserve" action="index.html" method="get">
                         <div class="formData">
                             <label for="first">Prénom</label><br>
                             <input class="text-control" autocomplete="off" type="text" id="first" name="first"
@@ -82,7 +82,7 @@
                         <div class="formData">
                             <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
                             <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
-                            <span class="span">Entrez un chiffre positif.
+                            <span class="span">Entrez un chiffre entre 0 et 99.
                             </span>
 
                         </div>
