--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -65,7 +65,8 @@
                         </div>
                         <div class="formData">
                             <label for="last">Nom</label><br>
-                            <input class="text-control" autocomplete="off" type="text" id="last" name="last" /><br>
+                            <input class="text-control" autocomplete="off" type="text" id="last" name="last"
+                                minlength="2" /><br>
                             <span class="span">Veuillez entrer 2 caractères ou plus.</span>
                         </div>
                         <div class="formData">
