--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -18,8 +18,8 @@
         </div>
         <div class="main-navbar">
 
-            <a href="#" class="active"><span>Accueil</span></a>
-            <a href="#"><span>Détails de l'évènement</span></a>
+            <!-- <a href="#" class="active"><span>Accueil</span></a> -->
+            <a href="#" class="active"><span>Détails de l'évènement</span></a>
             <a href="#"><span>À propos</span></a>
             <a href="#"><span>Contact</span></a>
             <a href="#"><span>Évènements passés</span></a>
@@ -72,12 +72,12 @@
                         <div class="formData">
                             <label for="email">E-mail</label><br>
                             <input class="text-control" autocomplete="off" type="email" id="email" name="email" /><br>
-                            <span class="span">Adresse mail non valide</span>
+                            <span class="span">Adresse mail non valide.</span>
                         </div>
                         <div class="formData">
                             <label for="birthdate">Date de naissance</label><br>
                             <input class="text-control" type="date" id="birthdate" name="birthdate" /><br>
-                            <span class="span">Vous devez entrer votre date de naissance.</span>
+                            <span class="span">Veuillez entrer votre date de naissance.</span>
 
                         </div>
                         <div class="formData">
@@ -89,7 +89,7 @@
                         </div>
                         <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
                         <div class="formData">
-                            <input class="checkbox-input" type="radio" checked="checked" id="location1" name="location"
+                            <input class="checkbox-input" type="radio" id="location1" name="location"
                                 value="New York" />
                             <label class="checkbox-label" for="location1">
                                 <span class="checkbox-icon"></span>
